@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1624] fixed template linkage popup, when all templates are selected by default (Vedmak)
  - [ZBX-1604] extended maintenance period info messages (Aly)
  - [ZBX-1647] removed respection of host availabilities on maps (Aly)
  - [ZBX-1495] fixed map level label location (Aly)
